# pdf_merger

./: .gitignore  README.md  main.py  main.spec  pyproject.toml  setup.py
pdf_src/: main.py
pdf_src/ui/: __init__.py  app_ui.py
src/: __init__.py  main.py  pdf_merger.py
src/ui/: app_ui.py
